Fin de la leccion  0. Se agregaron los ejercicios sugueridos al final y con algunos cambios extras

--- a/TipCalc/app/src/main/res/values/strings.xml
+++ b/TipCalc/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="detail.message.bill">Total $%,.1f</string>
     <string name="global.message.tip">Propina $%,.1f</string>
     <string name="tipdetail.message.bill">Total $%,.1f</string>
+    <string name="tipdetail.button.goback">Go back</string>
 
 </resources>
